# assemblylift-iomod-stdlib

./: Cargo.toml  Dockerfile  Dockerfile_aws-lambda  README.md
.github/workflows/: main.yml
crypto/: Cargo.toml
crypto/guest/: Cargo.toml
crypto/guest/src/: lib.rs
crypto/src/: main.rs
dynamodb/: Cargo.toml
dynamodb/guest/: Cargo.toml
dynamodb/guest/src/: lib.rs  structs.rs
dynamodb/src/: main.rs
modules/crypto/: Cargo.toml  iomod.toml
modules/crypto/guest/: Cargo.toml
modules/dynamodb/: Cargo.toml  iomod.toml
modules/dynamodb/guest/: Cargo.toml
modules/dynamodb/guest/src/: lib.rs  structs.rs
modules/dynamodb/src/: client.rs  main.rs
modules/dynamodb/src/client/: mod.rs
modules/http/: Cargo.toml  Dockerfile  iomod.toml
modules/http/docker/: Dockerfile-buster  Dockerfile-lambda
modules/http/guest/: Cargo.toml
modules/http/guest/src/: lib.rs  structs.rs
modules/http/src/: client.rs  main.rs
modules/lambda/: Cargo.toml  iomod.toml
modules/lambda/docker/: Dockerfile-buster  Dockerfile-lambda
modules/lambda/guest/: Cargo.toml
modules/lambda/guest/src/: lib.rs  structs.rs
modules/lambda/src/: client.rs  main.rs
modules/s3/: Cargo.toml  iomod.toml
modules/s3/guest/: Cargo.toml
modules/s3/guest/src/: lib.rs  structs.rs
modules/s3/guest/src/xml_util/: error.rs  util.rs
modules/s3/src/: client.rs  macros.rs  main.rs
modules/s3/src/client/: mod.rs
modules/secretsmanager/: Cargo.toml  iomod.toml
modules/secretsmanager/docker/: Dockerfile-lambda
modules/secretsmanager/guest/: Cargo.toml
modules/secretsmanager/guest/src/: lib.rs  structs.rs
modules/secretsmanager/src/: client.rs  main.rs
scripts/: copy.sh
