[package]
name = "assemblylift-iomod-crypto-guest"
version = "0.1.0"
authors = ["xlem <xlem@akkoro.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assemblylift_core_io_guest = { version = "0.1.0", package = "assemblylift-core-io-guest" }
assemblylift_core_iomod_guest = { version = "0.2.0", package = "assemblylift-core-iomod-guest" }

serde = "1.0.116"
serde_json = "1.0.58"
