[package]
name = "assemblylift-iomod-crypto"
version = "0.1.1"
description = "AssemblyLift Crypto IOmod (host)"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift-iomod-stdlib"
readme = "README.md"

[[bin]]
name = "akkoro-std-crypto"
path = "src/main.rs"

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }

capnp = "0.14"
capnp-rpc = "0.14"

tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
futures = "0.3"
futures-util = "0.3"

serde = "1"
serde_json = "1"

assemblylift_core_iomod = { version = "0.3", package = "assemblylift-core-iomod" }
