[package]
name = "assemblylift-iomod-dynamodb"
version = "0.1.4"
description = "AssemblyLift DynamoDB IOmod (host)"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift-iomod-stdlib"
readme = "README.md"

[[bin]]
name = "akkoro-aws-dynamodb"
path = "src/main.rs"

[dependencies]
guest = { package = "assemblylift-iomod-dynamodb-guest", version = "0.1", path = "guest" }

capnp = "0.14"
capnp-rpc = "0.14"

tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
futures = "0.3"
futures-util = "0.3"

rusoto_signature = "0.46"

assemblylift_core = { version = "0.3", package = "assemblylift-core" }
assemblylift_core_iomod = { version = "0.3", package = "assemblylift-core-iomod" }

http = "0.2"
hyper = "0.14"
hyper-tls = "0.5"
#hyper-rustls = "0.22"
#rustls = "0.19"
#rustls-native-certs = { version = "0.5.0", optional = true }
once_cell = "1.4"
serde = "1"
serde_json = "1"
crossbeam-utils = "0.8"
paste = "1"

reqwest = "0.11"