[package]
name = "http"
version = "0.1.0"
authors = ["xlem <xlem@akkoro.io>"]
edition = "2018"

[[bin]]
name = "akkoro-std-http"
path = "src/main.rs"

[dependencies]
http = "0.2.1"
hyper = "0.13.9"
hyper-tls = "0.4.3"
tokio = { version = "0.2.22", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["compat"] }
futures = "0.3.5"
futures-util = "0.3.5"
once_cell = "1.4.1"
rusoto_signature = "0.45.0"

serde = "1.0.116"
serde_json = "1.0.58"

assemblylift_core_iomod = { version = "0.2.1", package = "assemblylift-core-iomod" }

capnp = "0.13.3"
capnp-rpc = "0.13.1"

