[package]
name = "http"
version = "0.1.0"
authors = ["xlem <xlem@akkoro.io>"]
edition = "2018"

[[bin]]
name = "akkoro-std-http"
path = "src/main.rs"

[dependencies]
guest = { package = "assemblylift-iomod-http-guest", version = "0.1.0", path = "guest" }

http = "0.2.1"
#hyper = "0.13.9"
#hyper-tls = "0.4.3"
#tokio = { version = "0.2.22", features = ["full"] }
#tokio-util = { version = "0.3.1", features = ["compat"] }
hyper = "0.14"
hyper-rustls = "0.22"
rustls = "0.19"
rustls-native-certs = { version = "0.5.0", optional = true }
tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
futures = "0.3.5"
futures-util = "0.3.5"
once_cell = "1.4.1"
rusoto_signature = "0.46.0"
#rusoto_signature = "0.45"

serde = "1.0.116"
serde_json = "1.0.58"

assemblylift_core_iomod = { version = "0.3", package = "assemblylift-core-iomod" }

capnp = "0.13.3"
capnp-rpc = "0.13.1"

