[package]
name = "assemblylift-iomod-std-http"
version = "0.3.0"
authors = ["xlem <xlem@akkoro.io>"]
edition = "2021"

[[bin]]
name = "akkoro-std-http"
path = "src/main.rs"

[dependencies]
guest = { package = "assemblylift-iomod-http-guest", version = "0.3", path = "guest" }

clap = { version = "3.1", features = ["derive"] }
flate2 = "1"
http = "0.2"
hyper = "0.14"
hyper-tls = "0.5"
#hyper-rustls = "0.22"
#rustls = "0.19"
#rustls-native-certs = { version = "0.5.0", optional = true }
tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
futures = "0.3"
futures-util = "0.3"
once_cell = "1.4"
rusoto_signature = "0.46"
tracing = "0.1"
tracing-subscriber = "0.3"

serde = "1"
serde_json = "1"

assemblylift_core_iomod = { version = "0.4.0-alpha.0", package = "assemblylift-core-iomod" }

capnp = "0.14"
capnp-rpc = "0.14"
