[package]
name = "lambda"
version = "0.1.0"
authors = ["xlem <xlem@akkoro.io>"]
edition = "2018"

[[bin]]
name = "akkoro-aws-lambda"
path = "src/main.rs"

[dependencies]
guest = { package = "assemblylift-iomod-lambda-guest", version = "0.1.0", path = "guest" }

capnp = "0.13.3"
capnp-rpc = "0.13.1"

tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
futures = "0.3.5"
futures-util = "0.3.5"

rusoto_signature = "0.46.0"

assemblylift_core = { version = "0.2.2", package = "assemblylift-core" }
assemblylift_core_io = { version = "0.2.0", package = "assemblylift-core-io" }
assemblylift_core_iomod = { version = "0.3.0", package = "assemblylift-core-iomod" }

http = "0.2.1"
hyper = "0.14"
hyper-tls = "0.5"
once_cell = "1.4.1"
serde = "1.0.116"
serde_json = "1.0.58"
crossbeam-utils = "0.7.2"
paste = "1.0.1"

reqwest = "0.11"