[package]
name = "assemblylift-iomod-aws-lambda"
version = "0.1.0"
authors = ["xlem <xlem@akkoro.io>"]
edition = "2018"

[[bin]]
name = "akkoro-aws-lambda"
path = "src/main.rs"

[dependencies]
guest = { package = "assemblylift-iomod-lambda-guest", version = "0.1", path = "guest" }

capnp = "0.14"
capnp-rpc = "0.14"

tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
futures = "0.3"
futures-util = "0.3"

rusoto_signature = "0.46"

assemblylift_core = { version = "0.3", package = "assemblylift-core" }
assemblylift_core_iomod = { version = "0.3", package = "assemblylift-core-iomod" }

http = "0.2"
hyper = "0.14"
hyper-tls = "0.5"
once_cell = "1.4"
serde = "1"
serde_json = "1"
crossbeam-utils = "0.8"
paste = "1"

reqwest = "0.11"