[package]
name = "assemblylift-iomod-s3"
version = "0.1.0"
description = "AssemblyLift S3 IOmod (host)"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift-iomod-stdlib"
readme = "README.md"

[[bin]]
name = "akkoro-aws-s3"
path = "src/main.rs"

[dependencies]
guest = { package = "assemblylift-iomod-s3-guest", version = "0.1", path = "guest" }

xml-rs = "0.8"
http = "0.2"
hyper = "0.14"
hyper-rustls = "0.22"
rustls = "0.19"
rustls-native-certs = { version = "0.5.0", optional = true }
tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
futures = "0.3"
futures-util = "0.3"

rusoto_signature = "0.46"

capnp = "0.14"
capnp-rpc = "0.14"

assemblylift_core_iomod = { version = "0.3", package = "assemblylift-core-iomod" }

once_cell = "1.4"
serde = "1"
serde_json = "1"
serde_xml_rs = { version = "0.4", package = "serde-xml-rs" }
paste = "1"
