[package]
name = "secretsmanager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "akkoro-aws-secretsmanager"
path = "src/main.rs"

[dependencies]
guest = { package = "assemblylift-iomod-secretsmanager-guest", version = "0.1", path = "guest" }

assemblylift_core_iomod = { version = "0.4.0-alpha", package = "assemblylift-core-iomod" }
capnp = "0.14"
capnp-rpc = "0.14"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
http = "0.2"
hyper = "0.14"
hyper-tls = "0.5"
once_cell = "1.4"
rusoto_signature = "0.48"
serde = "1"
serde_json = "1"
crossbeam-utils = "0.8"
paste = "1"
tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = "0.3"
