[package]
name = "assemblylift-iomod-crypto-guest"
version = "0.1.2"
description = "AssemblyLift Crypto IOmod (guest)"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift-iomod-stdlib"
readme = "README.md"

[dependencies]
assemblylift_core_io_guest = { version = "0.3", package = "assemblylift-core-io-guest" }
assemblylift_core_iomod_guest = { version = "0.3", package = "assemblylift-core-iomod-guest" }

serde = "1"
serde_json = "1"
