[package]
name = "assemblylift-iomod-dynamodb-guest"
version = "0.1.5"
description = "AssemblyLift DynamoDB IOmod (guest)"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift-iomod-stdlib"
readme = "README.md"

[dependencies]
serde = "1"
serde_json = "1"
bytes = "0.5"
base64 = "0.12"

assemblylift_core_io_guest = { version = "0.3.0", package = "assemblylift-core-io-guest", path = "../../../../assemblylift/core/io/guest" }
assemblylift_core_iomod_guest = { version = "0.3.0", package = "assemblylift-core-iomod-guest", path = "../../../../assemblylift/core/iomod/guest" }
