[package]
name = "assemblylift-iomod-lambda-guest"
version = "0.1.0"
authors = ["xlem <xlem@akkoro.io>"]
edition = "2018"

[dependencies]
serde = "1"
serde_json = "1"
bytes = "0.5"
base64 = "0.12"

assemblylift_core_io_guest = { version = "0.2.1", package = "assemblylift-core-io-guest" }
assemblylift_core_iomod_guest = { version = "0.2.0", package = "assemblylift-core-iomod-guest" }