[package]
name = "assemblylift-iomod-s3-guest"
version = "0.1.0"
description = "AssemblyLift S3 IOmod (guest)"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift-iomod-stdlib"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assemblylift_core_io_guest = { version = "0.2.1", package = "assemblylift-core-io-guest" }
assemblylift_core_iomod_guest = { version = "0.2.0", package = "assemblylift-core-iomod-guest" }

serde = "1.0.106"
serde_json = "1.0.53"
xml-rs = "0.8"
