[package]
name = "assemblylift-iomod-s3-guest"
version = "0.1.1"
description = "AssemblyLift AWS S3 IOmod guest lib"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift-iomod-stdlib"
readme = "README.md"

[dependencies]
assemblylift_core_io_guest = { version = "0.3", package = "assemblylift-core-io-guest" }
assemblylift_core_iomod_guest = { version = "0.3", package = "assemblylift-core-iomod-guest" }

serde = "1"
serde_json = "1"
xml-rs = "0.8"
