[package]
name = "assemblylift-iomod-secretsmanager-guest"
description = "AssemblyLift AWS SecretsManager IOmod guest lib"
version = "0.1.0"
authors = ["xlem <xlem@akkoro.io>"]
edition = "2021"
license-file = "../../../LICENSE.md"

[dependencies]
serde = "1"
serde_json = "1"
bytes = "0.5"
base64 = "0.13"

assemblylift_core_iomod_guest = { version = "0.4.0-alpha", package = "assemblylift-core-iomod-guest" }
assemblylift_core_io_guest = { version = "0.4.0-alpha", package = "assemblylift-core-io-guest" }
